src/objects/DFC_Community_Representative__c.object
<CustomObject>
    <description>A person taking responsibility for meeting the requirements of the recognition process</description>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>DFC_Community__c</referenceTo>
        <relationshipName>Representatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipName>DFC_Community_Representatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invited_Email__c</fullName>
        <label>Invited Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Name__c</fullName>
        <label>Invited Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviter_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inviter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <formula>DF_Contact__r.Portal_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DFC Representative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Community__c</columns>
        <columns>DF_Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Invited_Name__c</columns>
        <columns>Invited_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>lraje</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Community_Representatives</fullName>
        <columns>Community__c</columns>
        <columns>Role__c</columns>
        <columns>Invited_Email__c</columns>
        <columns>Invited_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Community Representatives</label>
    </listViews>
    <nameField>
        <displayFormat>DFCR - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Representatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>